# cryptology

./: .gitignore  FINAL_STATUS.txt  README.en.md  README.md  README.tr.md  TEST_RESULTS.txt  TRIFID_BUG_NOTES.txt  TURKISH_ALPHABET_FIXES_STATUS.txt  TURKISH_FIXES_SUMMARY.txt
c/: .gitignore  ALPHABETS.md  (+14 more)
python/: ALPHABETS.md  README.md  example.py  pyproject.toml  requirements.txt  test_all_alphabets.py  test_all_alphabets_comprehensive.py  test_all_ciphers.py  test_all_ciphers_final.py  test_comprehensive.py  test_focused_ciphers.py
python/cryptology/: __init__.py  alphabets.py
python/examples/: affine_produced_alphabet_demo.py  alberti_example.py  autokey_example.py  chaocipher_mono_integration.py  composable_ciphers.py  custom_alphabets.py  custom_pairing_strategies.py  fractionated_example.py  gronsfeld_example.py  letter_combination_demo.py  letter_combination_test.py  monoalphabetic_squares_example.py  nihilist_example.py  pairing_generators.py  pairing_strategy_analysis.py  polygraphic_custom_alphabets.py  polygraphic_example.py  porta_enhanced_example.py  porta_example.py  reihenschieber_example.py  straddling_checkerboard_example.py  vigenere_example.py  vigenere_random_key_example.py
python/tests/: test_affine.py  test_atbash.py  test_autokey.py  test_beaufort.py  test_caesar.py  test_chaocipher.py  test_four_square.py  test_gronsfeld.py  test_hill.py  test_keyword.py  test_nihilist.py  test_playfair.py  test_porta.py  test_porta_enhanced.py  test_reihenschieber.py  test_rot13.py  test_straddling_checkerboard.py  test_two_square.py  test_vigenere.py
(+143 files in other folders)
